# AUDIT

./: .env.example  .gitignore  README.md  audit_build_backend.py  package-lock.json  package.json  pyproject.toml  scan_cache.sqlite3
.github/workflows/: npm-publish.yml  release-binaries.yml
audit/: __init__.py  __main__.py  cli.py  scan_repo.py
backend/app/: config.py  main.py
backend/app/embed/: embeddings.py
backend/app/ingest/: file_walker.py  repo_loader.py
backend/app/parse/: chunkers.py
backend/app/scan/: cache.py  candidate_stage.py  kb_loader.py  llm_audit.py  prefilter.py  prompts.py  references.py  resume.py  scan_repo.py  scanner.py  (+2 more)
backend/tests/: test_cache.py  test_candidate_stage.py  test_chunkers.py  test_cli.py  test_config.py  test_llm_audit.py  test_prefilter.py  test_references.py  test_resume.py  test_retrieval_contract.py  test_scan_repo.py  test_schema.py  test_taxonomy.py
cli/: codeguard_cli.py
demo_vuln_repo/: README.md  routes.js  vuln_app.py
demo_vuln_repo/src/: app.py
npm/: LICENSE  README.md  package.json
npm/scripts/: platform.js  postinstall.js
testCodebase/: package.json
testCodebase/public/: index.html
testCodebase/scripts/: api_server.py  cron_jobs.sh  data_processor.py
testCodebase/src/: app.js  auth.js  fileManager.js
test_repo/: README.md
test_repo/admin/: panel.html
test_repo/config/: settings.js
test_repo/public/: admin.js
test_repo/scripts/: generate_report.py  setup_db.sql
test_repo/src/: db.js  middleware.js  payments.js  websocket.js
tools/: build_binary.py  package_release_assets.py
(+62 files in other folders)
