[build-system]
requires = []
build-backend = "audit_build_backend"
backend-path = ["."]

[project]
name = "audit-local-scanner"
version = "0.1.0"
description = "Local-first security scanning CLI with deterministic fallback heuristics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3",
    "typer>=0.12,<1",
]

[project.scripts]
audit = "audit.cli:entrypoint"
